@@ -61,6 +61,8 @@ REM 2011-04-01 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/pyscss-1.0.3 
 REM 2011-04-01 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/python-faker-0.2.4 %a
 REM 2011-04-01 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-vcs/gitserve-0.2.0-r3 %a
 REM 2011-04-01 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-vcs/gitserve-0.2.0-r3 %a
+REM 2011-04-03 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 media-gfx/blockdiag-0.7.3 %a
+REM 2011-04-03 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/blockdiag-0.7.3 %a
 REM 2011-05-07 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-util/ditz-0.5-r1 %a
 REM 2011-05-07 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-util/ditz-0.5-r1 %a
 REM 2011-05-10 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/rstctl-0.4 %a
