@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*blockdiag-0.7.3 (04 Mar 2011)
+
+  04 Mar 2011; James Rowe <jnrowe@gmail.com> +blockdiag-0.7.3.ebuild:
+  Version bump [300].
+
 *blockdiag-0.7.0 (01 Mar 2011)
 
   01 Mar 2011; James Rowe <jnrowe@gmail.com> +blockdiag-0.7.0.ebuild:
